*SVN*

* Added callback hooks to association collections #1549 [Florian Weber]. Example:

    class Project
      has_and_belongs_to_many :developers, :before_add => :evaluate_velocity
    
      def evaluate_velocity(developer)
        ...
      end
    end 
  
  ..raising an exception will cause the object not to be added (or removed, with before_remove).
    

* Fixed Base.content_columns call for SQL Server adapter #1450 [DeLynn Berry]

* Fixed Base#write_attribute to work with both symbols and strings #1190 [Paul Legato]

* Fixed that has_and_belongs_to_many didn't respect single table inheritance types #1081 [Florian Weber]

* Speed up ActiveRecord#method_missing for the common case (read_attribute).

* Only notify observers on after_find and after_initialize if these methods are defined on the model.  #1235 [skaes@web.de]

* Fixed that single-table inheritance sub-classes couldn't be used to limit the result set with eager loading #1215 [Chris McGrath]

* Fixed validates_numericality_of to work with overrided getter-method when :allow_nil is on #1316 [raidel@onemail.at]

* Added roots, root, and siblings to the batch of methods added by acts_as_tree #1541 [michael@schuerig.de]

* Added support for limit/offset with the MS SQL Server driver so that pagination will now work #1569 [DeLynn Berry]

* Added support for ODBC connections to MS SQL Server so you can connect from a non-Windows machine #1569 [Mark Imbriaco/DeLynn Berry]

* Fixed that multiparameter posts ignored attr_protected #1532 [alec+rails@veryclever.net]

* Fixed problem with eager loading when using a has_and_belongs_to_many association using :association_foreign_key #1504 [flash@vanklinkenbergsoftware.nl]

* Fixed Base#find to honor the documentation on how :joins work and make them consistent with Base#count #1405 [pritchie@gmail.com]. What used to be:

    Developer.find :all, :joins => 'developers_projects', :conditions => 'id=developer_id AND project_id=1'
  
  ...should instead be:
  